Updated color picker

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,3 +58,8 @@ body {
 .controls_range {
   margin-bottom: 30px;
 }
+.control_picker {
+  align-self: center;
+  height: 50px;
+  cursor: pointer;
+}
